# amazonka

./: cabal.project
amazonka-alexa-business/: amazonka-alexa-business.cabal
amazonka-apigateway/: amazonka-apigateway.cabal
amazonka-apigatewaymanagementapi/: amazonka-apigatewaymanagementapi.cabal
amazonka-application-autoscaling/: amazonka-application-autoscaling.cabal
amazonka-appstream/: amazonka-appstream.cabal
amazonka-appsync/: amazonka-appsync.cabal
amazonka-athena/: amazonka-athena.cabal
amazonka-autoscaling/: amazonka-autoscaling.cabal
amazonka-autoscaling-plans/: amazonka-autoscaling-plans.cabal
amazonka-batch/: amazonka-batch.cabal
amazonka-budgets/: amazonka-budgets.cabal
amazonka-certificatemanager/: amazonka-certificatemanager.cabal
amazonka-certificatemanager-pca/: amazonka-certificatemanager-pca.cabal
amazonka-cloud9/: amazonka-cloud9.cabal
amazonka-clouddirectory/: amazonka-clouddirectory.cabal
amazonka-cloudformation/: amazonka-cloudformation.cabal
amazonka-cloudfront/: amazonka-cloudfront.cabal
amazonka-cloudhsm/: amazonka-cloudhsm.cabal
amazonka-cloudhsmv2/: amazonka-cloudhsmv2.cabal
amazonka-cloudsearch/: amazonka-cloudsearch.cabal
amazonka-cloudsearch-domains/: amazonka-cloudsearch-domains.cabal
amazonka-cloudtrail/: amazonka-cloudtrail.cabal
amazonka-cloudwatch/: amazonka-cloudwatch.cabal
amazonka-cloudwatch-events/: amazonka-cloudwatch-events.cabal
amazonka-cloudwatch-logs/: amazonka-cloudwatch-logs.cabal
amazonka-codebuild/: amazonka-codebuild.cabal
amazonka-codecommit/: amazonka-codecommit.cabal
amazonka-codedeploy/: amazonka-codedeploy.cabal
amazonka-codepipeline/: amazonka-codepipeline.cabal
amazonka-codestar/: amazonka-codestar.cabal
amazonka-cognito-identity/: amazonka-cognito-identity.cabal
amazonka-cognito-idp/: amazonka-cognito-idp.cabal
amazonka-cognito-sync/: amazonka-cognito-sync.cabal
amazonka-comprehend/: amazonka-comprehend.cabal
amazonka-config/: amazonka-config.cabal
amazonka-connect/: amazonka-connect.cabal
amazonka-cost-explorer/: amazonka-cost-explorer.cabal
amazonka-cur/: amazonka-cur.cabal
amazonka-datapipeline/: amazonka-datapipeline.cabal
amazonka-devicefarm/: amazonka-devicefarm.cabal
amazonka-directconnect/: amazonka-directconnect.cabal
amazonka-discovery/: amazonka-discovery.cabal
amazonka-dms/: amazonka-dms.cabal
amazonka-ds/: amazonka-ds.cabal
amazonka-dynamodb/: amazonka-dynamodb.cabal
amazonka-dynamodb-dax/: amazonka-dynamodb-dax.cabal
amazonka-dynamodb-streams/: amazonka-dynamodb-streams.cabal
amazonka-ec2/: amazonka-ec2.cabal
amazonka-ecr/: amazonka-ecr.cabal
amazonka-ecs/: amazonka-ecs.cabal
amazonka-efs/: amazonka-efs.cabal
amazonka-elasticache/: amazonka-elasticache.cabal
amazonka-elasticbeanstalk/: amazonka-elasticbeanstalk.cabal
amazonka-elasticsearch/: amazonka-elasticsearch.cabal
amazonka-elastictranscoder/: amazonka-elastictranscoder.cabal
amazonka-elb/: amazonka-elb.cabal
core/: amazonka-core.cabal
core/src/Data/Attoparsec/: Combinator.hs
core/src/Data/Attoparsec/ByteString/: Buffer.hs
core/src/Data/Attoparsec/Internal/: Types.hs
core/src/Data/Attoparsec/Text/: Buffer.hs  Internal.hs
core/src/Network/AWS/: Lens.hs  Prelude.hs
core/src/Network/AWS/Data/: Base64.hs  Body.hs  Headers.hs  List1.hs  Text.hs  Time.hs
(+85 files in other folders)
