name:                  amazonka-core
version:               1.6.1
synopsis:              Core data types and functionality for Amazonka libraries.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2017 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >= 1.10

description:
    Core data types, functionality and serialisation primitives for
    Amazonka related Amazon Web Services SDKs.
    .
    The external interface of this library is stable with respect to the
    downstream Amazonka libraries, only, and as such is not suitable
    for use in non-Amazonka projects.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            core

flag old-locale
    description:       Use old-locale and time < 1.5
    default:           False

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.Prelude
        , Network.AWS.Lens

    other-modules:
          Network.AWS.Data.Base64
        , Network.AWS.Data.ByteString
        , Network.AWS.Data.Headers
        , Network.AWS.Data.List1
        , Network.AWS.Data.Query
        , Network.AWS.Data.Text
        , Network.AWS.Data.Time
        , Network.AWS.Data.XML
        , Network.AWS.Types

    build-depends:
          aeson                >= 0.8
        , attoparsec           >= 0.11.3
        , base                 >= 4.7 && < 5
        , bifunctors           >= 4.1
        , bytestring           >= 0.9
        , case-insensitive     >= 1.2
        , conduit              >= 1.1
        , conduit-extra        >= 1.1
        , cryptonite           >= 0.4
        , deepseq              >= 1.4
        , exceptions           >= 0.6
        , hashable             >= 1.2
        , http-client          >= 0.4 && < 0.7
        , http-conduit         >= 2.1.4 && < 3
        , http-types           >= 0.8 && (<0.11 || >=0.12)
        , lens                 >= 4.4
        , memory               >= 0.6
        , mtl                  >= 2.1.3.1
        , resourcet            >= 1.1
        , scientific           >= 0.3
        , semigroups           >= 0.12
        , tagged               >= 0.7
        , text                 >= 1.1
        , transformers         >= 0.2
        , transformers-compat  >= 0.3
        , unordered-containers >= 0.2.7
        , xml-conduit          >= 1.7.0.1
        , xml-types            >= 0.3.4

    if !impl(ghc>=7.9)
        build-depends:
              nats >= 0.1.3

    if flag(old-locale)
        build-depends:
              old-locale == 1.*
            , time       >= 1.2 && < 1.5
    else
        build-depends:
              time       >= 1.5
